Create dynamic routers

--- a/app/Auth/login/login.component.html
+++ b/app/Auth/login/login.component.html
@@ -18,7 +18,7 @@
           </div>
           <div class="form-group logging-options">
             <a class="forget-password" href="">Forget Password?</a>
-            <a class="register" routerLink="/signup">Create New Account</a>
+            <a class="register" href="{{ this.resolver.ResolverURL('register') }}">Create New Account</a>
           </div>
           <button type="submit" class="btn btn-primary">Sign in</button>
         </form>
