--- a/app/Auth/login/login.component.css
+++ b/app/Auth/login/login.component.css
@@ -1,22 +1,73 @@
-html {
-  background-color: #edf1f5 !important;
-}
 .logging-options {
   margin-bottom: 8px;
   font-size: 14px;
 }
 .logging-options a {
-  display: block;
+  display: inline-block;
+  text-decoration: none;
+  color: rgb(11, 14, 44);
+  font-size: 14px;
+  font-weight: bold;
+  transition: all .3s ease-in-out;
 }
+.logging-options a:hover {
+  color: rgb(20, 118, 255);
+}
+.logging-options a:last-of-type {
+  float: right;
+}
+
 .login-form {
   margin-left: auto;
   margin-right: auto;
 }
-.login-form form {
+.login input,
+.login-form button[type="submit"] {
+  margin-bottom: 16px;
+  min-height: 52px;
+  border-color: #e9eaf3;
+  border-radius: 52px;
+  box-shadow: 0 2px 12px 0 rgb(11 22 44 / 5%);
+  transition: box-shadow 300ms ease, color 300ms ease, border-color 300ms ease;
+  font-size: 14px;
+  line-height: 1.143em;
+}
+.login input:hover {
+  border-color: #989aad;
+  box-shadow: 0 2px 12px 0 rgb(11 22 44 / 10%);
+}
+.login input:focus {
+  border-color: #1476ff
+}
+.login-form button[type="submit"] {
+  width: 100%;
+  background-color: #1476ff;
+  font-weight: bold;
+  transition: all .3s ease-out;
+}
+.login-form button[type="submit"]:hover {
+  transform: scale(1.04);
+  background-color: #004cff;
+}
+.login-form {
   padding: 14px;
   background-color: #FFF;
-  border-radius: 8px;
+  border-radius: 30px;
   border: 1px solid #EEE;
   margin-top: 20px;
   width: 75%;
+  box-shadow: 0 2px 10px 0 rgb(25 93 194 / 7%);
+}
+.login-form .logo {
+  text-align: center;
+  width: 100%
+}
+.login-form .logo img {
+  vertical-align: middle;
+  border-style: none;
+  max-width: 60%;
+  transition: all .3s ease-in-out;
+}
+.login-form .logo img:hover {
+  transform: scale(1.04);
 }
