--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,21 +1,171 @@
-<div id="main-wrapper" data-layout="vertical" data-navbarbg="skin5" data-sidebartype="full" data-sidebar-position="absolute" data-header-position="absolute" data-boxed-layout="full">
-  <!-- Navbar -->
-  <app-navbar [user_request]="userRequest()" [navbar_icons]="svg_icon"></app-navbar>
-  <!-- Sidebar -->
-  <div *ngIf="userRequest().is_authenticated">
-    <app-sidebar *ngIf="is_authenticated === true" [user_request]="userRequest()" [sidebar_icon]="svg_icon"></app-sidebar>
+<div *ngIf="userRequest().is_authenticated" class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
+  <!-- Header -->
+  <div class="app-header header-shadow">
+    <div class="app-header__logo">
+        <img width="150" id="shipping-logo" src="assets/images/shipping-spot-logo.png" alt="">
+        <div class="header__pane ml-auto">
+            <div>
+                <button (click)="closed_sidebar()" type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="app-header__mobile-menu">
+      <div>
+        <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
+      </div>
+    </div>
+    <div class="app-header__content">
+      <div class="app-header-left">
+      </div>
+      <div class="app-header-right">
+          <div class="header-btn-lg pr-0">
+              <div class="widget-content p-0">
+                  <div class="widget-content-wrapper">
+                      <div class="widget-content-left  ml-3 header-user-info">
+                          <div class="widget-heading">
+                              {{ contact_name }}
+                          </div>
+                          <div class="widget-subheading">
+                              {{ user_role }}
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </div>
   </div>
 
-  <!-- Page-Wrapper -->
-  <div class="page-wrapper">
-    <!-- Breadcrumb -->
-    <app-breadcrumb *ngIf="is_authenticated === true" [user_request]="userRequest()" [breadcrumb_icon]="svg_icon"></app-breadcrumb>
-    <router-outlet  *ngIf="routeName('profile')"></router-outlet>
+  <div class="app-main">
+    <!-- Sidebar -->
+    <div class="app-sidebar sidebar-shadow">
+      <div class="app-header__logo">
+          <div class="logo-src"></div>
+          <div class="header__pane ml-auto">
+              <div>
+                  <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
+                      <span class="hamburger-box">
+                          <span class="hamburger-inner"></span>
+                      </span>
+                  </button>
+              </div>
+          </div>
+      </div>
+      <div class="scrollbar-sidebar">
+        <div class="app-sidebar__inner">
+          <ul class="vertical-nav-menu">
+            <li class="app-sidebar__heading"></li>
+            <li class="heading-content">
+                <a href="#" (click)="arrow_rotation($event);">
+                    <fa-icon [icon]="svg_icon.faClock"></fa-icon>&nbsp;
+                    Dashboard
+                    <fa-icon class="caret-left" [icon]="svg_icon.faChevronRight"></fa-icon>&nbsp;
+                </a>
+                <ul>
+                    <li>
+                        <a href="#">
+                            Report
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="metismenu-icon">
+                            </i>Billing & Earnings
+                        </a>
+                    </li>
+                </ul>
+            </li>
+
+            <li class="heading-content">
+                <a href="#" (click)="arrow_rotation($event);">
+                    <fa-icon [icon]="svg_icon.faUser"></fa-icon>&nbsp;
+                    Account
+                    <fa-icon class="caret-left" [icon]="svg_icon.faChevronRight"></fa-icon>&nbsp;
+                </a>
+                <ul>
+                    <li>
+                        <a href="elements-buttons-standard.html">
+                            <i class="metismenu-icon"></i>
+                            My Profile
+                        </a>
+                    </li>
+                    <li>
+                        <a href="elements-dropdowns.html">
+                            <i class="metismenu-icon">
+                            </i>My Contacts
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="heading-content">
+                <a href="#" (click)="arrow_rotation($event);">
+                    <fa-icon [icon]="svg_icon.faGear"></fa-icon>&nbsp;
+                    Settings
+                    <fa-icon class="caret-left" [icon]="svg_icon.faChevronRight"></fa-icon>&nbsp;
+                </a>
+                <ul>
+                    <li>
+                        <a (click)="logout()" href="javascript:void(0);" class="nav-link">
+                            <fa-icon [icon]="svg_icon.faRightFromBracket"></fa-icon>&nbsp;
+                            Logout
+                        </a>
+                    </li>
+                </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Main App Content -->
+    <div class="app-main__outer">
+        <div class="app-main__inner">
+          <div class="app-page-title">
+            <div class="page-title-wrapper">
+              <div class="page-title-heading">
+                <div class="page-title-icon">
+                  <i></i>
+                </div>
+                <div>
+                  text
+                  <div class="page-title-subheading">text2</div>
+                </div>
+              </div>
+              <div class="page-title-actions">
+                <button class="btn btn-success">+ Create RFQ</button>
+              </div>
+            </div>
+          </div>
+          <router-outlet *ngIf="routeName('profile')" name="profile"></router-outlet>
+          <router-outlet *ngIf="routeName('client')" name="client"></router-outlet>
+        </div>
+    </div>
   </div>
 </div>
 
-<!-- Login page: Start Page Out of main-wrapper -->
-<div>
-  <router-outlet *ngIf="routeName('login')" name="login"></router-outlet>
-  <router-outlet *ngIf="routeName('register')" name="register"></router-outlet>
+<div class="logging">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <!-- Login View -->
+        <router-outlet *ngIf="routeName('login')" name="login">
+          <div class="greeting text-center mt-4 mb-2">
+            <h3>
+              <b>Welcome to</b> ShippingSpot
+            </h3>
+          </div>
+        </router-outlet>
+        <!-- Register View -->
+        <router-outlet *ngIf="routeName('register')" name="register"></router-outlet>
+      </div>
+    </div>
+  </div>
 </div>
