--- a/app/app.component.html
+++ b/app/app.component.html
@@ -140,12 +140,14 @@
                 </div>
               </div>
               <div class="page-title-actions">
-                <button class="btn btn-success">+ Create RFQ</button>
+                <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">+ Create RFQ</button>
               </div>
             </div>
           </div>
           <router-outlet *ngIf="routeName('profile')" name="profile"></router-outlet>
           <router-outlet *ngIf="routeName('client')" name="client"></router-outlet>
+
+
         </div>
     </div>
   </div>
@@ -167,5 +169,26 @@
         <router-outlet *ngIf="routeName('register')" name="register"></router-outlet>
       </div>
     </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <form>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">RFQ Group</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <input class="form-control" type="text" name="rfq_group" placeholder="RFQ Group...">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Create New Group</button>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
