--- a/app/RFQ_Components/MainForm/MainForm.component.html
+++ b/app/RFQ_Components/MainForm/MainForm.component.html
@@ -1,8 +1,8 @@
-<div class="form-group" *ngIf="is_selected">
-  <input class="form-control mb-2" type="text" required autocomplete="off" placeholder="Title" ngModel>
-  <input class="form-control mb-2" type="text" required autocomplete="off" placeholder="Commodity" ngModel>
+<div class="form-group">
+  <input name="Request_Title" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Title" ngModel>
+  <input name="Commodity" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Commodity" ngModel>
   <div class="form-floating mb-2">
-    <textarea class="form-control" placeholder="Leave a comment here" id="noteTextarea" ngModel></textarea>
+    <textarea name="Note" class="form-control" placeholder="Leave a comment here" id="noteTextarea" ngModel></textarea>
     <label for="noteTextarea">Note</label>
   </div>
 </div>
