--- a/app/app.component.html
+++ b/app/app.component.html
@@ -132,7 +132,7 @@
     <!-- Main App Content -->
     <div class="app-main__outer">
         <div class="app-main__inner">
-          <div class="app-page-title">
+          <div *ngIf="hasRoute('/rfq')" class="app-page-title">
             <div class="page-title-wrapper">
               <div class="page-title-heading">
                 <div class="page-title-icon">
@@ -147,7 +147,7 @@
                 <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#rfqg">+ Create RFQ</button>
               </div>
             </div>
-          </div>
+          </div >
           <router-outlet></router-outlet>
         </div>
     </div>
