add RFQ, RFQ_Group, RFQ_Items

--- a/app/RFQ/createRfq/CreateRFQ.component.html
+++ b/app/RFQ/createRfq/CreateRFQ.component.html
@@ -19,6 +19,19 @@
       <router-outlet></router-outlet>
       <router-outlet name="Air_Freight"></router-outlet>
       <router-outlet name="Ocean_Freight_FCL"></router-outlet>
+      <router-outlet name="Ocean_Freight_LCL"></router-outlet>
+      <router-outlet name="International_Trucking_FTL"></router-outlet>
+      <router-outlet name="International_Trucking_LTL"></router-outlet>
+      <router-outlet name="International_Courier"></router-outlet>
+
+      <router-outlet name="Domestic_Courier"></router-outlet>
+      <router-outlet name="Domestic_Trucking"></router-outlet>
+      <router-outlet name="Custom_Clearance"></router-outlet>
+      <router-outlet name="Storage"></router-outlet>
+      <router-outlet name="Packing"></router-outlet>
+      <router-outlet name="Fumigation"></router-outlet>
+      <router-outlet name="Handling_Equipment"></router-outlet>
+      <router-outlet name="Insurance"></router-outlet>
     </div>
   </div>
 </div>
